Fixed icon alignment
visual purposes only, not functional

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -29,7 +29,9 @@ footer {
     background-color: #515585
 }
 
-
+.feature-box {
+    text-align: center;
+}
 
 .navbar-brand {
     font-family: 'Montserrat', sans-serif;
